content width overlap correct

--- a/css/about.css
+++ b/css/about.css
@@ -1,9 +1,12 @@
 html, body {
     margin: 0;
+    padding: 0;
+    width: 100%;
     height: 100%;
     font-family: Montserrat, sans-serif;
     background-color: rgb(219, 219, 219);
     font-size: 18px;scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 * {
@@ -126,6 +129,7 @@ html, body {
     display: flex;
     justify-content: center;
     width: 100%;
+    height: 100%;
 }
 
 .container-items {
@@ -141,8 +145,8 @@ h1 {
 }
 
 .about-card {
-    width: 50rem;
-    height: 450px;
+    width: 50em;
+    height: 80%;
     border-width: 1px;
     border-color: rgba(219, 234, 254, 1);
     border-radius: 1rem;
@@ -168,6 +172,7 @@ footer {
     border-top: 1px solid #dee2e6;
     z-index: 10;
     width: 100%;
+    bottom: 0;
 }
 
 
@@ -304,6 +309,7 @@ footer {
         width: 100%;
         height: 100%;
         padding: 20px;
+        margin-top: -80px;
     }
     
     .container-items {
@@ -319,8 +325,8 @@ footer {
     }      
     
     .about-card {
-        max-width: 30em;
-        height: 50em;
+        max-width: 25em;
+        height: 70%;
         border-width: 1px;
         border-color: rgba(219, 234, 254, 1);
         border-radius: 1rem;
@@ -345,4 +351,38 @@ footer {
         border-top: 1px solid #dee2e6;
         font-size: 15px;
     }
+}
+
+@media  screen and (max-width: 430px) {
+    .container {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        margin-top: -50px;
+    }
+    
+    .container-items {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    
+    h1 {
+        margin-bottom: 5px;
+        margin-left: 20px;
+    }      
+    
+    .about-card {
+        max-width: 20em;
+        height: 80%;
+        border-width: 1px;
+        border-color: rgba(219, 234, 254, 1);
+        border-radius: 1rem;
+        background-color: rgb(255, 232, 232);
+        padding: 20px;
+        overflow-y: auto;
+    }    
 }
